Update CoordinatesService.java